# drf-api

./: README.md  pyproject.toml
api/: models.py  serializers.py  settings.py  urls.py  views.py
